--- a/qrvey/package.json
+++ b/qrvey/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.1.1",
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
     "jquery": "^3.5.1",
     "modals": "^0.1.9",
     "ngx-bootstrap": "^6.2.0",
